--- a/src/app/tabs/apps/tracker-capture/tracker-capture.page.html
+++ b/src/app/tabs/apps/tracker-capture/tracker-capture.page.html
@@ -35,5 +35,18 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <div *ngIf="isLoading">
+                    <app-progress-bar [color]="(colorSettings$ | async).colorAttributes.secondary" [isIndeterminateProcess]="true" [processMessage]="''">
+                    </app-progress-bar>
+                </div>
+                <div *ngIf="!isLoading">
+                    <app-program-based-paramater-selection (currentSelectionChange)="onCurrentSelectionChange($event)" [authorities]="authorities" [currentEntrySelection]="currentEntrySelection" [programIdsByUserRoles]="programIdsByUserRoles" [programType]="programType"
+                        [allowMultipleOuSelection]="allowMultipleOuSelection"></app-program-based-paramater-selection>
+                </div>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
