--- a/src/app/tabs/apps/event-capture/components/program-based-paramater-selection/program-based-paramater-selection.component.html
+++ b/src/app/tabs/apps/event-capture/components/program-based-paramater-selection/program-based-paramater-selection.component.html
@@ -42,6 +42,6 @@
         </div>
     </div>
     <div class="item-card ion-text-center" padding-top padding-bottom *ngIf="!isProgramDimensionApplicable">
-        <span [translate]="'All of selected category disaggregation are restricted from entry in selcted organisation unit, choose a different form or contact your support desk'"></span>
+        <span [translate]="'All of selected category disaggregation are restricted from entry in selected organisation unit, choose a different form or contact your support desk'"></span>
     </div>
 </div>
