--- a/src/app/tabs/apps/data-entry/data-entry.page.html
+++ b/src/app/tabs/apps/data-entry/data-entry.page.html
@@ -35,5 +35,17 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <div *ngIf="isLoading">
+                    <app-progress-bar [color]="(colorSettings$ | async).colorAttributes.secondary" [isIndeterminateProcess]="true" [processMessage]="''">
+                    </app-progress-bar>
+                </div>
+                <div *ngIf="!isLoading">
+                    <app-aggegate-parameter-selection (currentSelectionChange)="onCurrentSelectionChange($event)" [calendarId]="calendarId" [authorities]="authorities" [currentEntrySelection]="currentEntrySelection" [dataSetIdsByUserRoles]="dataSetIdsByUserRoles" [allowMultipleOuSelection]="allowMultipleOuSelection"></app-aggegate-parameter-selection>
+                </div>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
