--- a/src/app/tabs/accounts/about/components/about-container/about-container.component.html
+++ b/src/app/tabs/accounts/about/components/about-container/about-container.component.html
@@ -1,3 +1,7 @@
-<p>
-  about-container works!
-</p>
+<div>
+  <app-aggregated-status></app-aggregated-status>
+  <app-app-system-info></app-app-system-info>
+  <app-enrollments></app-enrollments>
+  <app-event-status></app-event-status>
+  <app-event-tracker-status></app-event-tracker-status>
+</div>
