--- a/src/app/tabs/accounts/about/components/about-container/about-container.component.html
+++ b/src/app/tabs/accounts/about/components/about-container/about-container.component.html
@@ -1,7 +1,9 @@
 <div>
   <app-aggregated-status></app-aggregated-status>
-  <app-app-system-info></app-app-system-info>
   <app-enrollments></app-enrollments>
   <app-event-status></app-event-status>
   <app-event-tracker-status></app-event-tracker-status>
+  <app-app-system-info
+    [systemInfoContent]="systemInfoContent"
+  ></app-app-system-info>
 </div>
