--- a/src/app/tabs/accounts/about/components/app-system-info/app-system-info.component.html
+++ b/src/app/tabs/accounts/about/components/app-system-info/app-system-info.component.html
@@ -1,3 +1,32 @@
-<p>
-  app-system-info works!
-</p>
+<!--
+*
+* Copyright 2019 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2019
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
+
+<div *ngFor="let item of systemInfoContent | keyvalue">
+  <div class="space">
+    <ion-label
+      ><b>{{ item.key }}</b></ion-label
+    >: <ion-label>{{ item.value }}</ion-label>
+  </div>
+</div>
