--- a/src/app/tabs/accounts/about/about.page.html
+++ b/src/app/tabs/accounts/about/about.page.html
@@ -37,7 +37,7 @@
 <ion-content>
   <div class="ion-text-center">
     <div class="logo">
-      <!-- <img [src]="appLogo"> -->
+      <img [src]="appLogo" />
     </div>
     <ion-text>
       <span [textContent]="appName"></span><br />
