--- a/src/app/tabs/accounts/about/about.page.html
+++ b/src/app/tabs/accounts/about/about.page.html
@@ -49,7 +49,10 @@
     <ion-row>
       <ion-col>
         <div>
-          <app-about-container [systemInfoContent]="systemInfoContent">
+          <app-about-container
+            [systemInfoContent]="systemInfoContent"
+            [aboutContents]="aboutContents"
+          >
           </app-about-container>
         </div>
       </ion-col>
